<resources>
    <string name="app_name">Fooding</string>
    <string name="facebook_app_id">473064569718293</string>
    <string name="fb_login_protocol_scheme">fb473064569718293</string>

    <!--SplashActivity-->
    <string name="huu_hoang">Huu Hoang</string>
    <string name="loading">loading</string>
    <string name="version">Version </string>


    <!--copy-->
    <string name="phienban">Phiên bản</string>
    <string name="dangtai">Đang tải…</string>
    <string name="tencongty">checongbinh.itschool</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="app_id">992366210899636</string>
    <string name="dangnhapfacebook">Đăng nhập bằng Facebook</string>
    <string name="dangnhapbanggoogle">Đăng nhập bằng Google</string>
    <string name="quenmatkhau">Quên mật khẩu ?</string>
    <string name="dangkymoi"><u>Đăng ký mới</u></string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="thongbaoloidangky">Bạn chưa nhập </string>
    <string name="thongbaonhaplaimatkhau">Vui lòng nhập giống mật khẩu ở trên </string>
    <string name="thongbaodangkythanhcong">Tạo tài khoản thành công </string>
    <string name="dangxuly">Đang xử lý </string>
    <string name="thongbaodangnhapthatbai">Tài khoản không hợp lệ !</string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu</string>
    <string name="chuoikhoiphucmatkhau">Bạn vui lòng nhập địa chỉ Email vào khung bên dưới để khôi phục mật khẩu !</string>
    <string name="guimail">Gữi email</string>
    <string name="chuoithanhvien">Bạn không phải là thành viên ? </string>
    <string name="thongbaoemailkhonghople">Email không lệ !</string>
    <string name="thongbaoguimailthanhcong">Gữi email thành công !</string>
    <string name="odau">Ở đâu</string>
    <string name="angi">Ăn gì ?</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">HCM</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng </string>
    <string name="gameandfun">Game and fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blogs">Blogs </string>
    <string name="topmember">Top thành viên</string>
    <string name="datmon">Đặt món </string>

</resources>
