<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroungHomePage"
    android:orientation="vertical">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/bt_rd_moinhat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="@string/moinhat"
            android:textColor="@drawable/changetext_tab_trangchu" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroungHomePage" />

        <RadioButton
            android:id="@+id/bt_rd_danhmuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="@string/danhmuc"
            android:textColor="@drawable/changetext_tab_trangchu" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroungHomePage" />

        <RadioButton
            android:id="@+id/bt_rd_khuvuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="@string/khuvuc"
            android:textColor="@drawable/changetext_tab_trangchu" />
    </RadioGroup>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="day la an gi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    style="@style/ButtonFragmentStyle"
                    android:drawableLeft="@drawable/nearby"
                    android:text="@string/gantoi" />

                <Button
                    style="@style/ButtonFragmentStyle"
                    android:drawableLeft="@drawable/order"
                    android:text="@string/giaohang" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    style="@style/ButtonFragmentStyle"
                    android:drawableLeft="@drawable/gameandfun"
                    android:text="@string/gameandfun" />

                <Button
                    style="@style/ButtonFragmentStyle"
                    android:drawableLeft="@drawable/review"
                    android:text="@string/danhgia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    style="@style/ButtonFragmentStyle"
                    android:drawableLeft="@drawable/blog"
                    android:text="@string/blogs" />

                <Button
                    style="@style/ButtonFragmentStyle"
                    android:drawableLeft="@drawable/user"
                    android:text="@string/topmember" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
