<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparentBackgroundDangnhap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/khoiphucmatkhau"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/chuoikhoiphucmatkhau"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />

            <Button
                android:id="@+id/btnSendMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/radius_button"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:fontFamily="sans-serif"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/guimail"
                android:textAllCaps="false"
                android:textColor="@color/colorBgLogin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chuoithanhvien"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dangkymoi"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
    <ProgressBar
        android:id="@+id/pgLoading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone" />

</RelativeLayout>